--- a/components/Skeleton/Skeleton.module.css
+++ b/components/Skeleton/Skeleton.module.css
@@ -1,6 +1,6 @@
 .skeleton {
   width: 100%;
-  background: linear-gradient(to right, #333 0%, #555 50%, #333 100%);
+  background: linear-gradient(to right, #333 0%, #555 50%, #24c527 100%);
   background-size: 400% 400%;
   animation: pulse 1s ease-in-out infinite;
   min-height: 12px;
