--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,6 +8,15 @@
   font-style: normal;
 }
 
+.body { 
+  background: var(--black); 
+  font-family: 'Pictocrypto-Regular', sans-serif; 
+  color: var(--white); 
+  display: flex; 
+  margin: 0; 
+  text-align: center; 
+}
+
 
 .container {
   min-height: 99vh;
@@ -24,8 +33,8 @@
 .content {
   max-width: 1204px;
   width: 100%;
-  margin-left: 16px;
-  margin-right: 16px;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 .hero {
@@ -85,6 +94,7 @@
   align-items: center;
 }
 
+.heroTop,
 .heroTitle {
   margin-top: clamp(-30px, calc(-7vw + 57px), 5px);
   margin-bottom: 20px;
@@ -127,6 +137,20 @@
   transform: translateY(5px);
   font-family: 'Pictocrypto-Regular', sans-serif;
   text-align: 'center';
+}
+
+.heroMediumSubtitleWhite {
+  margin-top: clamp(-30px, calc(-7vw + 57px), 5px);
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: Min(12vw, 30px);
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: 1.2px;
+  text-align: center;
+  overflow: visible;
+  letter-spacing: -0.05em;
+  font-family: 'Pictocrypto-Regular', sans-serif;
 }
 
 .heroCtaContainer {
@@ -375,6 +399,7 @@
   justify-content: center;
   align-items: center;
   gap: 1em;
+  font-family: 'Pictocrypto-Regular', sans-serif; 
 }
 
 .tab {
@@ -463,6 +488,19 @@
     letter-spacing: -0.05em;
     font-family: 'Pictocrypto-Regular', sans-serif;
   }
+
+  .heroTop {
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: Min(12vw, 80px);
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: 1.2px;
+    text-align: center;
+    overflow: visible;
+    letter-spacing: -0.05em;
+    font-family: 'Pictocrypto-Regular', sans-serif;
+  }
 }
 
 /* Less than 900 px */
@@ -506,7 +544,7 @@
 }
 
 .heroVideoBackground {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -611,9 +649,72 @@
   }
 
   .iframecontainer {
-    margin: 0 25px;
+    margin: 0;
+    padding: 0 25px;
   }
 
 }
 
-/* ... (other media query styles) */
+
+/* Active tab */
+.activeTab {
+  background-color: rgba(255, 255, 255, 0.1);
+  font-family: 'Pictocrypto-Regular', sans-serif; 
+}
+
+/* Active tab content */
+.activeTabContent {
+  opacity: 1;
+  transform: scale(1);
+  max-height: 800px; /* Adjust this value based on your content */
+  overflow: visible;
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out, max-height 0.5s ease-in-out;
+  font-family: 'Pictocrypto-Regular', sans-serif; 
+}
+
+/* Transition */
+.transition {
+  opacity: 0;
+  transform: scale(0.9);
+  max-height: 0;
+  overflow: hidden;
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out, max-height 0.5s ease-in-out;
+  font-family: 'Pictocrypto-Regular', sans-serif; 
+}
+
+.tabContentWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px; /* Adjust the gap between tab content sections */
+  font-family: 'Pictocrypto-Regular', sans-serif; 
+}
+
+.tabContent {
+  width: 100%;
+  max-width: 800px; /* Adjust the maximum width of the tab content */
+  padding-right: 35px;
+  padding-left: 35px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.05);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  color: #fff;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: justify;
+  transition: opacity 0.5s ease-in-out, max-height 0.5s ease-in-out;
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+  font-family: 'Pictocrypto-Regular', sans-serif; 
+}
+
+.activeTabContent {
+  opacity: 1;
+  max-height: 800px; /* Adjust this value based on your content */
+  transition: opacity 0.5s ease-in-out, max-height 0.5s ease-in-out;
+  font-family: 'Pictocrypto-Regular', sans-serif; 
+}
+
+
