--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -390,6 +390,16 @@
   opacity: 0.7;
 }
 
+.liners {
+  color: rgb(255, 255, 255);
+  font-size: 32px;
+  font-weight: 500;
+  letter-spacing: 0.2px;
+  line-height: 32px;
+  transition: color 0.3s ease-in-out;
+  font-family: 'Pictocrypto-Regular';
+  text-decoration: none;
+}
 
 .tabs {
   margin-top: 2em;
