--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -554,13 +554,14 @@
 }
 
 .heroVideoBackground {
-  position: absolute;
+    position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
   overflow: hidden;
+  object-fit: cover;
+  z-index: -1; /* Send the video to the background */
 }
 
 .heroVideoBackgroundInner {
@@ -574,13 +575,18 @@
 }
 
 #video-background {
-  object-fit: cover;
-  width: 100vw;
-  height: 100vh;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  transform: translate(-50%, -50%);
+  object-fit: cover; /* Ensures the video covers the entire container */
+  z-index: -1; /* Send the video to the background */
 }
+
 
 
 
@@ -728,3 +734,8 @@
 }
 
 
+/* Apply these styles to the content that scrolls above the video */
+.content {
+  position: relative;
+  z-index: 1; /* Bring the content to the foreground */
+}
