--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -85,6 +85,7 @@
   width: 100%;
   padding: 0 32px;
   margin: 0 auto;
+  align-items: center;
 }
 
 .heroBody {
@@ -511,6 +512,25 @@
     letter-spacing: -0.05em;
     font-family: 'Pictocrypto-Regular', sans-serif;
   }
+
+  .heroBodyContainer {
+    width: 100%;
+    padding: 0 0px;
+    margin: 0 auto;
+    align-items: center;
+  }
+  
+  .heroBody {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .iframecontainer {
+    margin: 0;
+    padding: 0 0px;
+  }
 }
 
 /* Less than 900 px */
@@ -535,6 +555,11 @@
     max-height: 270px;
     font-family: 'Pictocrypto-Regular', sans-serif;
   }
+
+  .iframecontainer {
+    margin: 0;
+    padding: 0 0px;
+  }
 }
 
 /* Above 640 and less than 960 */
@@ -550,6 +575,11 @@
 
   .heroAsset {
     max-height: 540px;
+  }
+
+  .iframecontainer {
+    margin: 0;
+    padding: 0 0px;
   }
 }
 
@@ -666,7 +696,7 @@
 
   .iframecontainer {
     margin: 0;
-    padding: 0 25px;
+    padding: 0 0px;
   }
 
 }
